# hackerrank-orchestrate-june26

./: .gitignore  README.md  eval_report.md  output.csv  pyproject.toml
code/: config.py  images.py  loaders.py  main.py  model_client.py  pipeline.py  prompt.py  schema.py  writer.py
code/evaluation/: main.py
notebook/: test_model_client.ipynb
tests/: test_loaders.py
